--- a/views/qcm.ejs
+++ b/views/qcm.ejs
@@ -1,19 +1,21 @@
 <%- include('header') -%>
 
-<div>
-    <%= qcm.name %>
-</div>
+    <div>
+        <%= qcm.name %>
+    </div>
 
-<div>
-    <%= qcm.subject %>
-</div>
+    <div>
+        <%= qcm.subject %>
+    </div>
 
-<div>
-    <%= qcm.nbpoints %>
-</div>
+    <div>
+        <%= qcm.nbpoints %>
+    </div>
 
-<div>
-    <%= qcm.author %>
-</div>
+    <div>
+        <%= qcm.author %>
+    </div>
 
-<%- include('footer') -%>
+    <a href="/qcms">Back to QCMs</a>
+
+    <%- include('footer') -%>
