--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -1,6 +1,7 @@
 <%- include('header') -%>
 
-<h1>Welcome EJS</h1>
+    <h1>Welcome EJS</h1>
 
-<%- include('footer') -%>
+    <a href="/qcms">View QCMs</a>
 
+    <%- include('footer') -%>
