--- a/views/newqcm.ejs
+++ b/views/newqcm.ejs
@@ -1,22 +1,22 @@
-<!-- rajouter les headers
- -->
+<%- include('header') -%>
 
-<!--  mettre a jour le sujet et le nb de points
- -->
-<form action="/qcms/new" method="POST">
-    <div>
-        <label for="name">Nom</label>
-        <input type="text" id="name" name="name">
-    </div>
-    <div>
-        <label for="subject">Sujet</label>
-        <input type="text" id="subject" name="subject">
-    </div>
-    <div>
-        <label for="nbpoints">Nb points</label>
-        <input type="number" id="nbpoints" name="nbpoints">
-    </div>
-    <input type="submit" value="Create">
-</form>
+    <!-- Form to create a new QCM -->
+    <form action="/qcms/new" method="POST">
+        <div>
+            <label for="name">Nom</label>
+            <input type="text" id="name" name="name" required>
+        </div>
+        <div>
+            <label for="subject">Sujet</label>
+            <input type="text" id="subject" name="subject" required>
+        </div>
+        <div>
+            <label for="nbpoints">Nb points</label>
+            <input type="number" id="nbpoints" name="nbpoints" required>
+        </div>
+        <input type="submit" value="Create">
+    </form>
 
-<!-- ajouter les champs name, subject et nbpoints -->
+    <a href="/qcms">View QCMs</a>
+
+    <%- include('footer') -%>
