--- a/views/qcms.ejs
+++ b/views/qcms.ejs
@@ -1,12 +1,13 @@
 <%- include('header') -%>
 
-<p>Mes QCMS disponibles</p>
-<ul>
-    <% for (let qcm of qcms) { %> <!--commencer le parcours de la liste qcms -->
-    <li><%= qcm.name %> (<%= qcm.subject %>) : <%= qcm.nbpoints %> points</li> <!-- Introduction Vanilla JS (Javascript): 20 points -->
+    <p>Mes QCMS disponibles</p>
+    <ul>
+        <% for (let qcm of qcms) { %>
+            <li>
+                <%= qcm.name %> (<%= qcm.subject %>) : <%= qcm.nbpoints %> points
+                            <a href="/qcms/<%= qcm.id %>">View Details</a>
+            </li>
+            <% } %>
+    </ul>
 
-     <!-- afficher l'élément de la liste et le nb de points du Qcm-->
-    <% } %> <!-- penser à fermer le corps de la boucle -->
-</ul>
-
-<%- include('footer') -%>
+    <%- include('footer') -%>
